<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/wake_up_checkbox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:alpha="0.8"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:button="@drawable/checkbox_selector"
            android:paddingStart="10dp"
            android:textSize="20dp"
            android:text="@string/if_pet_wake_up" />

        <CheckBox
            android:id="@+id/notification_checkbox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:textColor="#000000"
            android:textStyle="bold"
            android:alpha="0.8"
            android:button="@drawable/checkbox_selector"
            android:paddingStart="10dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/not_notification" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/silence_mode"
            android:background="@drawable/item"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/item"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/item"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/silenceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:choiceMode="multipleChoice"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/add"
        android:layout_toEndOf="@+id/backFromNotification"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

    <Button
        android:id="@+id/add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="1dp"
        android:onClick="addSilence"
        android:background="@drawable/add"
        android:text="" />

    <Button
        android:id="@+id/backFromNotification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:onClick="goBack"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/back" />
</RelativeLayout>