<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DeletePetActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/delete_header_image"
        android:layout_above="@+id/delete_footer_image"
        android:scaleType="centerCrop"
        android:src="@drawable/tv03" />

    <ImageView
        android:id="@+id/delete_header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/tv01" />

    <TextView
        android:id="@+id/delete_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/delete_header_image"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginTop="1dp"
        android:text="@string/delete_pet" />

    <LinearLayout
        android:id="@+id/layoutDeletePet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_header"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_on"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/deleteSort"
            android:layout_marginTop="-10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/sort"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/delete_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/layoutDeletePet" />

    <ImageView
        android:id="@+id/delete_footer_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/tv02"
        android:layout_alignParentBottom="true"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

    <Button
        android:id="@+id/delPet"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="delete"
        android:background="@drawable/del" />

    <Button
        android:id="@+id/backFromDel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="1dp"
        android:onClick="goBack"
        android:background="@drawable/back" />
</RelativeLayout>